--- a/edit.html
+++ b/edit.html
@@ -22,6 +22,7 @@
     <div class="container">
         <input type="text" id="note-title" class="title-input" placeholder="Note title">
         <textarea name="" id="note-body" class="body-input" cols="30" rows="10" placeholder="Enter note text"></textarea>
+          <button  class="button"><a href="./index.html" id="save">Save Note</a></button> 
         <button id="remove-note" class="button button--secondary">Remove note</button>
     </div>
 
