--- a/edit.html
+++ b/edit.html
@@ -16,7 +16,7 @@
     </div>
     <div class="action">
         <div class="actions__container actions__container--spaced">
-            <a href="./index.html">Home</a><span id="time-stamp"></span>
+            <a href="./index.html" class="link">Home</a><span id="time-stamp"></span>
         </div>
     </div>
     <div class="container">
